--- a/styles.css
+++ b/styles.css
@@ -665,20 +665,31 @@ footer {
 
 /* Burger Section */
 
-.burgers-header{
+.menu-item-header{
     position: -webkit-sticky;
     position: sticky;
     top: 1.3em;
     font-size: 2.5em;
     padding: 0.2em;
     text-align: center;
-    background: var(--clr-light);
     z-index: 10;
+}
+
+.burgers-header{
+    background-color: var(--clr-light);
+}
+
+.shwarma-header{
+    background-color: var(--clr-primary);
+}
+
+.chicken-header{
+    background-color: var(--clr-secondary);
 }
 
 /* item section */
 
-#logo-img{
+.item-logo-img{
     position: absolute;
     left: -1em;
     top: 2.5em;
@@ -731,6 +742,12 @@ footer {
     object-fit: cover;
 }
 
+.price-for-item{
+    background-color: var(--clr-lightest);
+    padding: 1px;
+    border-radius: 2px;
+}
+
 .item-section {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -765,7 +782,7 @@ footer {
 
 @media (min-width: 0px) {
 
-    .burgers-header{
+    .menu-item-header{
         top: 1.85em;
     }
 
@@ -781,7 +798,7 @@ footer {
 
 @media (min-width: 335px) {
 
-    .burgers-header{
+    .menu-item-header{
         top: 1.38em;
     }
 }
@@ -829,214 +846,6 @@ footer {
     font-size: 1.3em;
     padding-bottom: .3em;
 }
-}
-
-
-/* 
-
-/*Menu Items*/
-/* 
-.home-motto img{
-    width: 12em;
-    height: 100%;
-    position: relative;
-    top: -.77em;
-    left: 45em;
-    z-index: 5;
-    display: flex;
-    object-fit: contain;
-    vertical-align: top;
-}
-
-.home-motto img:hover{
-    cursor: pointer;
-}
-
-.menu-item-header{
-    color: antiquewhite;
-    background-color: rgb(225, 28, 28);
-    padding: .2em 0;
-    text-align: center;
-    font-family: Cambria, Times, 'Times New Roman';
-    font-size: 3em;
-    position: -webkit-sticky;
-    position: sticky;
-    top: 1.15em;
-    z-index: 10;
-    margin-top: 0;
-}
-
-.burgers-header{
-    color: black;
-    background: var(--clr-light);
-    animation: glow-text 1s ease-in-out infinite alternate;
-}
-
-@keyframes glow-text{
-    from{
-        text-shadow: 0 0 1em #289aab ;
-    }
-    to{
-        text-shadow: 0 0 2em blue,
-                    0 0 3em blue;
-    }
-}
-
-@media (max-width: 1415px){
-
-    .item-section {
-        grid-template-columns: repeat(3, 33%);
-    }
-
-    .item-div{
-        width: 20em;
-        margin-right: 0;
-        left: 10%;
-    }
-    
-    .item-img{
-    object-fit: contain;
-    left: 0;
-    }
-}
-
-@media (max-width: 1023px){
-
-    .item-section {
-        grid-template-columns: repeat(2, 45%);
-    }
-}
-
-@media (max-width: 820px){
-    .home-motto img{
-        left: 35em;
-    }
-}
-
-@media (max-width: 745px){
-
-    .item-section {
-        grid-template-columns: 1fr;
-    }
-}
-
-@media (max-width: 540px){
-    .home-motto img{
-        left: 15em;
-    }
-}
-
-@media (max-width: 415px){
-
-    .home-motto img{
-        left: 10em;
-    }
-    
-    .header-logo img{
-        width: 15em;
-        height: 10em;
-        top: 8em;
-        left: -1.7em;
-    }
-}
-
-@media (max-width: 412px){
-
-    .home-motto img{
-        top: 1em;
-    }
-    
-    .header-logo img{
-        width: 10em;
-        top: 10em;
-    }
-}
-
-@media (max-width: 394px){
-
-    .home-motto img{
-        width: 10em;
-        top: 4em;
-        margin-bottom: 3em;
-    }
-    
-    .header-logo img{
-        width: 8em;
-        top: 12.5em;
-    }
-}
-
-@media (max-width: 376px){
-    .item-div{
-        left: 5%;
-    }
-}
-
-@media (max-width: 460px){
-    .item-div{
-        left: 1%;
-    }
-
-    .burgers-header{
-        font-size: 2em;
-    }
-
-    .menu-item-header{
-        padding: .2em 0;
-        top: 1.8em;
-    }
-}
-
-@media (max-width: 281px){
-    .home-motto img{
-        width: 10em;
-        top: 4em;
-        left: 5em;
-    }
-    
-    .item-div{
-        width: 15em;
-        margin-right: 0;
-        left: 1%;
-    }
-    
-    .item-img{
-        width: 15em;
-        left: 0;
-    }
-}
-
-/*to top button*/
-/* 
-.to-top a{
-    padding: .5em;
-    font-size: 1.2em;
-    border: 2px solid black;
-    display: inline-block;
-    position: relative;
-    left: 47%;
-    margin: .1em 0 .3em;
-    color: black;
-    text-decoration: none;
-    transition-duration: .5s;
-}
-
-.to-top a:hover {
-    cursor: pointer;
-    padding: .5em;
-    font-size: 1.2em;
-    border: 2px solid rgb(43, 0, 255);
-    display: inline-block;
-    position: relative;
-    left: 47%;
-    margin: .1em 0 .3em;
-    color: rgb(51, 0, 255);
-    transform: scale(1.2,1.1);
-}
-
-.to-top:active{
-    color: blue;
-    text-decoration: none;
 }
 
 /*Customer Care*/
