--- a/styles.css
+++ b/styles.css
@@ -696,6 +696,10 @@ footer {
     background-color: var(--clr-ice);
 }
 
+.hake-header{
+    background-color: var(--clr-greener);
+}
+
 /* item section */
 
 .item-logo-img{
