--- a/styles.css
+++ b/styles.css
@@ -882,67 +882,9 @@ legend{
     font-size: var(--fw-bold);
 }
 
-.customer-care-inputs form{
-    width: 30%;
-    border-radius: .5em;
-    box-shadow: .2px 1px 1px 2px rgba(77, 72, 72, 0.774);
-    border: .1em solid rgba(213, 200, 200, 0.605);
-    background: rgb(255, 255, 255);
-    padding: 1.5em;
-    margin: 8.7em auto;
-}
-
-.customer-care-inputs form .inputBox{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-.customer-care-inputs form .inputBox .input{
-    width: 100%
-}
-
-.customer-care-inputs form .inputBox .input input,
-.customer-care-inputs form .inputBox .input textarea{
-    background: rgb(221, 219, 216);
-    border-radius: .5em;
-    border: none;
-    padding: .5em;
-    font-size: 1em;
-    color: black;
-    width: 100%;
-    margin: 0 0 .5em;
-}
-
-.customer-care-inputs form .inputBox .input input,
-.customer-care-inputs form .inputBox .input:checked{
-    outline: none;
-}
-
-.customer-care-inputs form .btn{
-    margin: auto;
-    width: 100%;
-}
-
-.customer-care-inputs form .btn:hover{
-    letter-spacing: .1em;
-}
-
-textarea{
-    text-transform: none;
-    height: 10em;
-    resize: none;
-    width: 100%;
-    border-radius: .5em;
-    background: rgb(221, 219, 216);
-    padding: .5em;
-    font-size: 1em;
-    font-family: Helvetica, sans-serif;
-    border: none;
-}
-
 .customer-care-body{
-    background: rgb(223, 215, 215);
+    position: relative;
+    border-color: var(--clr-lightest);
 }
 
 .customerCare-section {
@@ -954,19 +896,13 @@ textarea{
     z-index: 10;
 }
 
-.contact-subhead{ 
-    display: inline-block;
-    position: relative;
-    left: 9.1%;
-    top: 5em;
-}
-
-.contact-subhead h1{
-    padding: 0 0 .3em;
-}
-
-.contact-subhead p{
-    padding: .1em 0 .2em;
+.contact-subhead{
+    text-align: center;
+    position: absolute;
+    padding: 0.2em;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
 }
 
 .customer-care-section-img{
@@ -978,28 +914,66 @@ textarea{
 
 .customer-care-section-img .customer-care-img {
     display: block;
-    width: 100%;
-    height: 16em;
+    width: 95%;
+    height: 15em;
     object-fit: cover;
-    position: relative;
-    left: 45.5%;
-    top: 60%;
+    position: absolute;
+    margin: 0;
+    left: 2em;
+    top: 5em;
     z-index: -1;
 }
 
-.customer-care-section-img .customer-burger{
-    border-top-left-radius: .5em;
-    border-bottom-left-radius: .5em;
-}
-
-.customer-care-section-img .customer-chicken{
-    border-top-right-radius: .5em;
-    border-bottom-right-radius: .5em;
-}
-
 .contact-logo{
-    width: 5em;
+    width: 15em;
 }
+
+   /*form*/
+
+input[type=text], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+  }
+
+input[type=text], select, textarea:hover {
+    outline: none;
+  }
+  
+  input[type=submit] {
+    background-color: var(--clr-greener);
+    color: var(--clr-black);
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  input[type=submit]:hover {
+    background-color: #45a049;
+    color: var(--clr-lightest);
+  }
+  
+  .container {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+    margin: 7em auto;
+    width: 90%;
+    bottom: 50%;
+  }
+
+@media (min-width: 0px){
+}
+
+@media (min-width: 1280px){
+}
+
 
 /*  */
 
