--- a/styles.css
+++ b/styles.css
@@ -1130,3 +1130,9 @@ input[type=text], input[type=email], input[type=tel], select, textarea:focus{
     gap: 0.5em;
     font-size: 1em;
 }
+
+.quantity-price{
+    position: absolute;
+    right: 2em;
+    bottom: 35%;
+}
