--- a/styles.css
+++ b/styles.css
@@ -263,14 +263,85 @@ body {
 
 /*Animated Ads*/
 
+.slideshow-container{
+    max-width: 100%;
+    position: relative;
+    margin: auto;
+}
+
+.caption{
+    color: var(--clr-black);
+    font-size: 1.25em;
+    font-weight: bold;
+    padding: 0.5em 0.7em;
+    position: absolute;
+    bottom: 0.5em;
+    width: 100%;
+    text-align: center;
+}
+
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 1em;
+    margin-top: -1.6em;
+    color: var(--clr-lightest);
+    font-weight: bold;
+    font-size: 1.2em;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    box-shadow: var(--bs);
+}
+
+.prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+}
+
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+.dot {
+    cursor: pointer;
+    height: 1em;
+    width: 1em;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+    background-color: #717171;
+}
+
 .animatedAds, .imgAd{
     width: 100%;
     height: 20em;
     object-fit: cover;
 }
 
+.animatedAds{
+    display: none;
+}
+
 .animatedAds:hover{
     cursor: pointer;
+}
+
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@keyframes fade {
+    from {opacity: .4} 
+    to {opacity: 1}
 }
 
 /*recommended section*/
