--- a/styles.css
+++ b/styles.css
@@ -220,15 +220,15 @@ body {
 
 .cart-icon{
     position: relative;
-    color: white;
+    color: var(--clr-lightest);
     font-size: 2em;
 }
 
 .cartValue{
     position: absolute;
-    right: -0.5em;
-    top: -0.3em;
-    padding: 0.2em;
+    right: -0.3em;
+    top: -0.5em;
+    padding: 0.1em;
     border-radius: 0.2em;
     font-size: 1em;
     color: var(--clr-lightest);
@@ -286,6 +286,7 @@ body {
     top: 50%;
     width: auto;
     padding: 1em;
+    margin: 0.5em;
     margin-top: -1.6em;
     color: var(--clr-lightest);
     font-weight: bold;
@@ -303,6 +304,10 @@ body {
 .next {
     right: 0;
     border-radius: 3px 0 0 3px;
+}
+
+.dots{
+    text-align:center
 }
 
 .dot {
